k8s/comments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 7141
  selector:
    app: comments
